--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
+    "@clerk/themes": "^1.7.9",
+    "@headlessui/react": "^1.7.17",
     "@next/font": "^14.0.4",
     "next": "14.0.4",
     "react": "^18",
