--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "heartsync",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^4.29.1",
-    "@clerk/themes": "^1.7.9",
-    "@headlessui/react": "^1.7.17",
-    "@next/font": "^14.0.4",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.7.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/simple-peer": "^9.11.8",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+    "name": "heartsync",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --experimental-https",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@clerk/nextjs": "^4.29.1",
+        "@clerk/themes": "^1.7.9",
+        "@headlessui/react": "^1.7.17",
+        "@next/font": "^14.0.4",
+        "@tanstack/react-query": "^5.17.12",
+        "next": "14.0.4",
+        "react": "^18",
+        "react-dom": "^18",
+        "simple-peer": "^9.11.1",
+        "socket.io-client": "^4.7.3"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/simple-peer": "^9.11.8",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.0.4",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    }
 }
